# snakey

./: .gitignore  README.md  app.py  game_engine.py  pyproject.toml  test_game_engine.py  test_nokia_authenticity.py  test_project_setup.py  test_sound_engine.py  test_web_interface.py
static/: game.js  sound_engine.js  style.css
templates/: game.html
