[project]
name = "snakey"
version = "0.1.0"
description = "A faithful recreation of the classic Nokia 1100 Snake game as a modern web application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

